<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ai_chat"
        android:title="@string/ai_chat_menu_title"
        android:icon="@drawable/ic_send"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_finnhub_settings"
        android:title="@string/update_finnhub_api_key"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ai_assistant"
        android:title="@string/ai_assistant_menu_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_diagnostic_log"
        android:title="@string/diagnostic_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gov_data_api_keys"
        android:title="@string/gov_data_api_keys_menu"
        app:showAsAction="never" />

</menu>